fix: asset info overflow

--- a/packages/core/src/ui/components/OutputSummary/OutputSummary.module.scss
+++ b/packages/core/src/ui/components/OutputSummary/OutputSummary.module.scss
@@ -14,6 +14,12 @@
   flex-direction: column;
 }
 
+.assetInfo {
+  overflow-wrap: break-word;
+  word-break: break-word;
+  max-width: 100%;
+}
+
 .container {
   display: flex;
   flex-direction: column;
